Fixed a CSS issue causing text to overlap

--- a/main.css
+++ b/main.css
@@ -200,7 +200,7 @@ nav {
 }
 
 
-/* Landing Page */
+/* Home Page */
 .home-page{
     width: 100%;
     height: 100vh;
@@ -306,56 +306,56 @@ nav {
 
 /* About */
 
-.about{
+.about {
     width: 100%;
     min-height: 100vh;
-    max-height: 70rem;
+    max-width: 90rem;
     margin: auto;
-}
-
-.about .container{
+  }
+  
+  .about .container {
     display: flex;
     align-items: center;
     min-height: 80vh;
-}
-
-.about-img img{
+  }
+  
+  .about-img img {
     height: 12rem;
     width: auto;
     border-radius: 50%;
     margin: 2rem;
     box-shadow: 0 20px 30px 0 rgba(199, 179, 2, 0.15);
-}
-
-.about-text{
+  }
+  
+  .about-text {
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 0;
-}
-
-.about-text h2{
+  }
+  
+  .about-text h2 {
     font-size: 4rem;
     margin-bottom: 20px;
-}
-
-.about-text p{
+  }
+  
+  .about-text p {
     font-family: "Open Sans", sans-serif;
     font-size: 1.6rem;
     padding: 0;
     margin-bottom: 1.45rem;
-}
-
-hr {
-    margin: 4rem;
+  }
+  
+  hr {
+    margin: 4rem 0;
     background: linear-gradient(
-        to right,
-        rgba(255,255,255, 1) 0%,
-        rgba(199, 179, 2, 1) 100%
-        
+      to right,
+      rgba(255,255,255, 1) 0%,
+      rgba(199, 179, 2, 1) 100%
     );
     border: 0;
     height: 1px;
-}
+  }
+
 
 /* Projects */
 
@@ -372,7 +372,7 @@ hr {
 .projects {
     padding: 3rem 0;
     min-height: 100vh;
-    max-width: 70rem;
+    max-width: 80rem;
     margin: auto;
 }
 
@@ -418,17 +418,11 @@ hr {
     font-size: 1.4rem;
 }
 
-
-.breakline1{
-    margin-left: -10rem;
-    margin-right: -10rem;
-}
-
 /* Contact */
 
 .contact{
     width: 100%;
-    min-height: 100vh;
+    min-height: 65vh;
     max-width: 70rem;
     margin: auto;
     padding-top: 5rem;
@@ -454,18 +448,13 @@ hr {
     align-items: center;
 }
 
-.breakline2{
-    margin-left: -20rem;
-    margin-right: -20rem;
-}
-
 footer{
     width: 100%;
     max-width: 70rem;
     margin: auto;
     padding: 2.5rem;
     color: #fafafa;
-    text-align: ceter;
+    text-align: center;
     font-size: 1.2rem;
     display: flex;
     justify-content: space-evenly;
@@ -482,5 +471,8 @@ footer a{
 
 .footer-icons{
     margin: 0 0.8rem;
-    font-size: 2.6rem;
+    font-size: 2.8rem;
 }
+
+/* Respnsive Design */
+
